Fix T65886: Crash when deleting a scene when "New Main Window" is open.

When we delete a scene, we need to update to new scene pointer all main
widows that might be using it, not only the active one from the context...