source/blender/editors/include/ED_scene.h
@@ -29,10 +29,7 @@ struct Scene *ED_scene_add(struct Main *bmain,
                            struct bContext *C,
                            struct wmWindow *win,
                            enum eSceneCopyMethod method) ATTR_NONNULL();
-bool ED_scene_delete(struct bContext *C,
-                     struct Main *bmain,
-                     struct wmWindow *win,
-                     struct Scene *scene) ATTR_NONNULL();
+bool ED_scene_delete(struct bContext *C, struct Main *bmain, struct Scene *scene) ATTR_NONNULL();
 void ED_scene_change_update(struct Main *bmain, struct Scene *scene, struct ViewLayer *layer)
     ATTR_NONNULL();
 bool ED_scene_view_layer_delete(struct Main *bmain,
